BS-037 Create Mockito test part 1