@@ -14,6 +14,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+
+     testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
     implementation 'org.postgresql:postgresql:42.7.2'
 }
 
@@ -24,6 +28,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
-}
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
 
+}
 
